Kubernetes_k3s/immich/immich-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: immich
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    referrerPolicy: "no-referrer"
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 1552000
    permissionsPolicy: "geolocation=(self), microphone=(), camera=(), fullscreen=*"
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
      X-Robots-Tag: noindex, nofollow
