Kubernetes_k3s/immich/immich-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
  labels:
    app: immich-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
      - name: immich-server
        image: ghcr.io/immich-app/immich-server:release
        ports:
        - containerPort: 2283
        volumeMounts:
        - name: immich-data
          mountPath: /data
        - name: nextcloud-photos
          mountPath: /mnt/nextcloud-photos
          readOnly: true
      volumes:
      - name: immich-data
        persistentVolumeClaim:
          claimName: immich-data
      - name: nextcloud-photos
        hostPath:
          path: /path/to/external/Photos
          type: Directory

---

apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  selector:
    app: immich-server
  ports:
    - protocol: TCP
      port: 2283
      targetPort: 2283
