Kubernetes_k3s/immich/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgres
  namespace: immich
  labels:
    app: immich-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-postgres
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      containers:
      - name: immich-postgres
        image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0@sha256:41eacbe83eca995561fe43814fd4891e16e39632806253848efaf04d3c8a8b84
        volumeMounts:
        - name: immich-postgres
          mountPath: /path/to/postgresql/data
      volumes:
      - name: immich-postgres
        persistentVolumeClaim:
          claimName: immich-postgres

---

apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
  namespace: immich
spec:
  selector:
    app: immich-postgres
  ports:
    - port: 5432
