Kubernetes_k3s/immich/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-redis
  namespace: immich
  labels:
    app: immich-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-redis
  template:
    metadata:
      labels:
        app: immich-redis
    spec:
      containers:
      - name: immich-redis
        image: docker.io/valkey/valkey:8-bookworm@sha256:fea8b3e67b15729d4bb70589eb03367bab9ad1ee89c876f54327fc7c6e618571
        ports:
        - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: immich-redis
  namespace: immich
spec:
  selector:
    app: immich-redis
  ports:
    - port: 6379
