Kubernetes_k3s/immich/immich-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-ingress
  namespace: immich
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - YOUR_IMMICH_URL
    secretName: immich-tls-cert
  rules:
  - host: YOUR_IMMICH_URL
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-server # Matches codeserver service name
            port:
              number: 2283 # Matches codeserver service external port
